layout bug fix

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,10 +1,14 @@
 footer {
-	@apply py-16 pb-20 flex items-end justify-between sticky bottom-0 left-0 w-full text-bright-primary;
+	@apply py-16 pb-20 md:flex items-end justify-between sticky bottom-0 left-0 w-full text-bright-primary;
 	@apply w-[90%] mx-auto md:w-10/12 lg:w-[80%] lg:max-w-6xl;
+
+	.left-section {
+		@apply text-center md:text-left;
+	}
 
 	.footer-content {
 		@apply text-center;
-		@apply font-medium text-sm mb-1;
+		@apply font-medium text-sm mb-1 text-bright-secondary;
 	}
 
 	.footer-links {
